DetailView layout 설정

--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--View Controller-->
         <scene sceneID="sMY-FH-Kt3">
             <objects>
-                <viewController id="hCt-fY-Je8" customClass="ViewController" customModule="PokeDex" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="hCt-fY-Je8" customClass="ViewController" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Vcn-CS-RFj">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -29,7 +29,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Moe-OU-gp1">
-                                                    <rect key="frame" x="120" y="10" width="240" height="85"/>
+                                                    <rect key="frame" x="100" y="10" width="260" height="85"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3LL-hO-6QS">
                                                             <rect key="frame" x="25" y="5" width="70" height="80"/>
@@ -58,7 +58,7 @@
                                                         <constraint firstItem="3LL-hO-6QS" firstAttribute="leading" secondItem="Moe-OU-gp1" secondAttribute="leading" constant="25" id="27c-43-dSv"/>
                                                         <constraint firstItem="dUX-v7-TY5" firstAttribute="leading" secondItem="3LL-hO-6QS" secondAttribute="trailing" constant="20" id="EHY-A3-Mdc"/>
                                                         <constraint firstItem="Gzg-Vd-bGt" firstAttribute="leading" secondItem="3LL-hO-6QS" secondAttribute="trailing" constant="20" id="Gz4-BL-7k6"/>
-                                                        <constraint firstAttribute="width" constant="240" id="KT8-Se-PW1"/>
+                                                        <constraint firstAttribute="width" constant="260" id="KT8-Se-PW1"/>
                                                         <constraint firstItem="3LL-hO-6QS" firstAttribute="top" secondItem="Moe-OU-gp1" secondAttribute="top" constant="5" id="bCC-ko-TpC"/>
                                                         <constraint firstAttribute="height" constant="90" id="g8Q-9T-twI"/>
                                                         <constraint firstItem="Gzg-Vd-bGt" firstAttribute="top" secondItem="Moe-OU-gp1" secondAttribute="top" constant="25" id="nW0-2c-3oZ"/>
@@ -69,7 +69,7 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="bottom" secondItem="Moe-OU-gp1" secondAttribute="bottom" constant="5" id="532-Xp-AMj"/>
-                                                <constraint firstItem="Moe-OU-gp1" firstAttribute="leading" secondItem="B1l-vH-apg" secondAttribute="leading" constant="120" id="BSt-jz-1g1"/>
+                                                <constraint firstItem="Moe-OU-gp1" firstAttribute="leading" secondItem="B1l-vH-apg" secondAttribute="leading" constant="100" id="BSt-jz-1g1"/>
                                                 <constraint firstItem="Moe-OU-gp1" firstAttribute="top" secondItem="B1l-vH-apg" secondAttribute="top" constant="10" id="Uzf-6Q-mye"/>
                                             </constraints>
                                         </tableViewCellContentView>
