--- a/Pokedex/DetailView/DetailViewController.storyboard
+++ b/Pokedex/DetailView/DetailViewController.storyboard
@@ -72,16 +72,49 @@
                                     <outlet property="iconImageView" destination="bhA-Uk-Fnp" id="9Vx-RI-u4U"/>
                                 </connections>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="hWe-LE-nRA">
+                                <rect key="frame" x="0.0" y="540" width="393" height="278"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PokemonAbilityCell" rowHeight="70" id="dQP-i1-tzg" customClass="PokemonAbilityCell" customModule="Pokedex" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="70"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dQP-i1-tzg" id="4AG-N7-q6q">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="70"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bqb-yl-Sgg">
+                                                    <rect key="frame" x="20" y="20" width="353" height="30"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="60" id="hgO-fB-DMY"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="bqb-yl-Sgg" firstAttribute="top" secondItem="4AG-N7-q6q" secondAttribute="top" constant="20" id="3u9-Qd-Yj2"/>
+                                                <constraint firstItem="bqb-yl-Sgg" firstAttribute="leading" secondItem="4AG-N7-q6q" secondAttribute="leading" constant="20" id="aAe-9G-T0U"/>
+                                                <constraint firstAttribute="bottom" secondItem="bqb-yl-Sgg" secondAttribute="bottom" constant="20" id="f2J-et-0Bp"/>
+                                                <constraint firstAttribute="trailing" secondItem="bqb-yl-Sgg" secondAttribute="trailing" constant="20" id="oA0-Xa-PIq"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="iUh-hU-H3b" secondAttribute="trailing" constant="20" id="00M-99-mJC"/>
+                            <constraint firstItem="hWe-LE-nRA" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="75K-nE-YDM"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="FKb-6l-KLd" secondAttribute="trailing" id="AXy-yL-5wK"/>
+                            <constraint firstItem="hWe-LE-nRA" firstAttribute="top" secondItem="iUh-hU-H3b" secondAttribute="bottom" constant="20" id="Emh-vk-hpl"/>
                             <constraint firstItem="WkZ-nv-c1x" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="Eol-2o-fGv"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="FKb-6l-KLd" secondAttribute="bottom" constant="450" id="Gys-tR-9fY"/>
                             <constraint firstItem="iUh-hU-H3b" firstAttribute="top" secondItem="WkZ-nv-c1x" secondAttribute="bottom" constant="20" id="Jc3-tS-VqJ"/>
+                            <constraint firstItem="hWe-LE-nRA" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="JmM-rT-5Kp"/>
                             <constraint firstItem="iUh-hU-H3b" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="MZt-BH-js4"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="hWe-LE-nRA" secondAttribute="bottom" id="UQY-E6-jLa"/>
                             <constraint firstItem="lEQ-JV-afu" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="e6i-Kq-dIb"/>
                             <constraint firstItem="FKb-6l-KLd" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="hfx-wb-FwL"/>
                             <constraint firstItem="FKb-6l-KLd" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="kjB-Ob-uSF"/>
